# confluence-markdown-publisher

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: README.txt
scripts/: convert_xhtml.py  publish_main_article.py
